# Prt

./: CMakeCache.txt  CMakeLists.txt  Main.cpp  Main.h  Makefile  cmake_install.cmake  dalvikvm64  todo.mk
dalvikvm/: BUILD  CMakeCache.txt  CMakeLists.txt  Makefile  Project.cbp  cmake_install.cmake
libnativehelper/: ALog-priv.h  AsynchronousCloseMonitor.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
libnativehelper/include/nativehelper/: ScopedLocalRef.h
